@@ -1,3 +1,11 @@
+2008-04-25  Martin Leidig  <mleidig@schlund.de>
+
+	* src/de/schlund/pfixcore/workflow/context/RequestContextImpl.java: Removed
+	the optional __roleauthtarget parameter, which was intended for calling the
+	login page directly and jumping to a target page after successful login. 
+	We don't need this parameter, because the login page is a regular page and
+	we can use a pageflow or jumptopage.
+
 2008-04-25  Jens Lautenbacher  <jtl@schlund.de>
 
 	* src/de/schlund/pfixcore/workflow/app/DefaultIWrapperState.java
